// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pincode renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "padding": 20,
        "paddingTop": 0,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/backup-icon.png",
          }
        }
        style={
          Array [
            Object {
              "height": 70,
              "width": 80,
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "padding": 25,
                "textAlign": "center",
              },
            ]
          }
          testID="PincodeTitle"
        >
          createPin.title
        </Text>
        <View
          style={
            Object {
              "marginVertical": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
          >
            createPin.intro createPin.why
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "marginVertical": 10,
              },
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Bold",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              important
               
            </Text>
            createPin.warn
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 5,
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#42D689",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="Pincode-Education"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#42D689",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pincode renders correctly 2`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "padding": 20,
        "paddingTop": 0,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/backup-icon.png",
          }
        }
        style={
          Array [
            Object {
              "height": 70,
              "width": 80,
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "padding": 25,
                "textAlign": "center",
              },
            ]
          }
        >
          createPin.title
        </Text>
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          keyboardType="numeric"
          maxLength={6}
          nativeInput={true}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="createPin.yourPin"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D1D5D8",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 24,
              "marginHorizontal": 60,
              "marginVertical": 15,
              "padding": 7,
              "textAlign": "center",
            }
          }
          textContentType="password"
          underlineColorAndroid="transparent"
          validator="integer"
          value=""
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 5,
          },
          Object {
            "backgroundColor": "#A3EBC6",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A3EBC6",
            "borderColor": "#A3EBC6",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="Pincode-Enter"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pincode renders correctly 3`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "padding": 20,
        "paddingTop": 0,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/backup-icon.png",
          }
        }
        style={
          Array [
            Object {
              "height": 70,
              "width": 80,
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "padding": 25,
                "textAlign": "center",
              },
            ]
          }
        >
          verifyPin.title
        </Text>
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          keyboardType="numeric"
          maxLength={6}
          nativeInput={true}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="createPin.yourPin"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D1D5D8",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 24,
              "marginHorizontal": 60,
              "marginVertical": 15,
              "padding": 7,
              "textAlign": "center",
            }
          }
          textContentType="password"
          underlineColorAndroid="transparent"
          validator="integer"
          value=""
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 5,
          },
          Object {
            "backgroundColor": "#42D689",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#42D689",
            "borderColor": "#42D689",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="Pincode-ReEnter"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            verifyPin.finalPin
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pincode renders correctly 4`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "padding": 20,
        "paddingTop": 0,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/backup-icon.png",
          }
        }
        style={
          Array [
            Object {
              "height": 70,
              "width": 80,
            },
            Object {
              "alignSelf": "center",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "padding": 25,
                "textAlign": "center",
              },
            ]
          }
        >
          verifyPin.title
        </Text>
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          keyboardType="numeric"
          maxLength={6}
          nativeInput={true}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="createPin.yourPin"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D1D5D8",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 24,
              "marginHorizontal": 60,
              "marginVertical": 15,
              "padding": 7,
              "textAlign": "center",
            }
          }
          textContentType="password"
          underlineColorAndroid="transparent"
          validator="integer"
          value=""
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          Object {
            "marginVertical": 10,
          },
          Object {
            "marginBottom": 10,
          },
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 5,
          },
          Object {
            "backgroundColor": "#42D689",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#42D689",
            "borderColor": "#42D689",
            "borderRadius": 3,
            "borderWidth": 2,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="Pincode-ReEnter"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            verifyPin.finalPin
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
